--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ceb-licensee-components-test",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -19,7 +19,10 @@
     "prop-types": "15.5.10",
     "react-star-rating-component": "1.4.1",
     "react-show-more-text": "^1.0.3",
-    "react-loadable": "5.5.0"
+    "react-loadable": "5.5.0",
+    "accounting": "0.4.1",
+    "react-ga": "2.4.1",
+    "emerald-ui": "0.3.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -45,7 +48,11 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
+    "accounting": "0.4.1",
+    "emerald-ui": "0.3.11",
+    "react-bootstrap": "0.32.1",
     "prop-types": "15.6.2",
+    "react-ga": "2.4.1",
     "react-loadable": "5.5.0",
     "react-show-more-text": "^1.0.3",
     "react-star-rating-component": "1.4.1"
